[project]
name = "suaveinternational_trader"
version = "0.0.1"
authors = [
  { name="Amer Akhtar", email="amersakhtar@gmail.com" },
]
description = "Suave International Trader application."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ASyedAkhtar/suaveinternationaltrader"
"Bug Tracker" = "https://github.com/ASyedAkhtar/suaveinternationaltrader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
